--- a/main.html
+++ b/main.html
@@ -11,10 +11,11 @@
     <script type="text/javascript" src="./script.js"></script>
 
 	
-	
+	<div>
 		<button data-ns-test="block-inline-button">Test1</button>
 		<button data-ns-test="block-inline-button">Test2</button>
-
+	</div>
+	
 		<div data-ns-test="block-inline-div">Test1</div>
 		<div data-ns-test="block-inline-div">Test2</div>
 		
