--- a/main.html
+++ b/main.html
@@ -12,8 +12,8 @@
 
 	
 	<div>
-		<button data-ns-test="block-inline-button">Test1</button>
-		<button data-ns-test="block-inline-button">Test2</button>
+		<button data-ns-test="block-inline-button">Inline</button>
+		<button data-ns-test="block-inline-button">Inline</button>
 	</div>
 	
 		<div data-ns-test="block-inline-div">Test1</div>
