--- a/main.html
+++ b/main.html
@@ -15,10 +15,11 @@
 		<button data-ns-test="block-inline-button">Inline</button>
 		<button data-ns-test="block-inline-button">Inline</button>
 	</div>
-	
-		<div data-ns-test="block-inline-div">Test1</div>
-		<div data-ns-test="block-inline-div">Test2</div>
-		
+
+	<div>
+		<div data-ns-test="block-inline-div">Block</div>
+		<div data-ns-test="block-inline-div">Block</div>
+	</div>
 	
 		<span data-ns-test="block-inline-span">Test1</span>
 		<span data-ns-test="block-inline-span">Test2</span>
