--- a/main.html
+++ b/main.html
@@ -12,22 +12,24 @@
 
 	
 	<div>
-		<button data-ns-test="block-inline-button">Inline</button>
-		<button data-ns-test="block-inline-button">Inline</button>
+		<button data-ns-test="block-inline-button">Answer:Inline</button>
+		<button data-ns-test="block-inline-button">Answer:Inline</button>
 	</div>
 
 	<div>
-		<div data-ns-test="block-inline-div">Block</div>
-		<div data-ns-test="block-inline-div">Block</div>
+		<div data-ns-test="block-inline-div">Answer:Block</div>
+		<div data-ns-test="block-inline-div">Answer:Block</div>
 	</div>
-	
-		<span data-ns-test="block-inline-span">Test1</span>
-		<span data-ns-test="block-inline-span">Test2</span>
-		
-		
+
+	<div>
+		<span data-ns-test="block-inline-span">Inline</span>
+		<span data-ns-test="block-inline-span">Inline</span>
+	</div>
+
+	<div>
 		<p data-ns-test="block-inline-p">Test1</p>
 		<p data-ns-test="block-inline-p">Test2</p>
-		
+	</div>	
 
 		<input data-ns-test="block-inline-input">Test1</input>
 		<input data-ns-test="block-inline-input">Test2</input>
