--- a/main.html
+++ b/main.html
@@ -12,13 +12,13 @@
 
 	
 	<div>
-		<button data-ns-test="block-inline-button">Test1</button>
-		<button data-ns-test="block-inline-button">Test2</button>
+		<button data-ns-test="block-inline-button">Test1:Inline</button>
+		<button data-ns-test="block-inline-button">Test2:Inline</button>
 	</div>
 
 	<div>
-		<div data-ns-test="block-inline-div">Test1</div>
-		<div data-ns-test="block-inline-div">Test2</div>
+		<div data-ns-test="block-inline-div">Answer:Block</div>
+		<div data-ns-test="block-inline-div">Answer:Block</div>
 	</div>
 
 	<div>
