--- a/main.html
+++ b/main.html
@@ -11,51 +11,65 @@
     <script type="text/javascript" src="./script.js"></script>
 
 	
-	<div>
-		<button data-ns-test="block-inline-button">Test1:Inline</button>
-		<button data-ns-test="block-inline-button">Test2:Inline</button>
-	</div>
-
-	<div>
-		<div data-ns-test="block-inline-div">Answer:Block</div>
-		<div data-ns-test="block-inline-div">Answer:Block</div>
-	</div>
-
-	<div>
-		<span data-ns-test="block-inline-span">Inline</span>
-		<span data-ns-test="block-inline-span">Inline</span>
-	</div>
-
-	<div>
-		<p data-ns-test="block-inline-p">Test1</p>
-		<p data-ns-test="block-inline-p">Test2</p>
-	</div>	
-
-		<input data-ns-test="block-inline-input">Test1</input>
-		<input data-ns-test="block-inline-input">Test2</input>
-		
-
-		<cite data-ns-test="block-inline-cite">Test1</cite>
-		<cite data-ns-test="block-inline-cite">Test2</cite>
-		
-
-		<code data-ns-test="block-inline-code">Test1</code>
-		<code data-ns-test="block-inline-code">Test2</code>
-		
-
-		<h1 data-ns-test="block-inline-h1">Test1</h1>
-		<h1 data-ns-test="block-inline-h1">Test2</h1>
-		
-
-		<sup data-ns-test="block-inline-sup">Test1</sup>
-		<sup data-ns-test="block-inline-sup">Test2</sup>
-			
-
-		<sub data-ns-test="block-inline-sub">Test1</sub>
-		<sub data-ns-test="block-inline-sub">Test2</sub>
-		
+	<div data-ns-test="block-inline-button">
+        <button>Test1</button>
+        <button>Test2</button>
+        Answer:Inline
+    </div>
 	
-
+    <div data-ns-test="block-inline-button">
+        <div>Test1</div>
+        <div>Test2</div>
+        Answer:Block
+    </div>
+	
+    <div data-ns-test="block-inline-button">
+        <span>Test1</span>
+        <span>Test2</span>
+        Answer:Inline
+    </div>
+	
+    <div data-ns-test="block-inline-button">
+        <p>Test1</p>
+        <p>Test2</p>
+        Answer:Block
+    </div>
+	
+    <div data-ns-test="block-inline-button">
+        <input type="test">test1
+        <input type="test">test2
+        Answer:Inline
+    </div>
+	
+    <div data-ns-test="block-inline-button">
+        <cite>test1</cite>
+        <cite>test2</cite>
+        Answer:Inline
+    </div>
+	
+    <div data-ns-test="block-inline-button">
+        <code>test1</code><code>test2</code>
+        Answer:Inline
+    </div>
+	
+    <div data-ns-test="block-inline-button">
+        <h1>Test1</h1>
+        <h1>Test2</h1>
+        Answer:Block
+    </div>
+	
+    <div data-ns-test="block-inline-button">
+        <sup>Test1</sup>
+        <sup>Test2</sup>
+        Answer:Inline
+    </div>
+	
+    <div data-ns-test="block-inline-button">
+        <sub>Test1</sub>
+        <sub>Test2</sub>
+        Answer:Inline 
+    </div>
+	
 </body>
 
 </html>
