--- a/main.html
+++ b/main.html
@@ -17,54 +17,54 @@
         Answer:Inline
     </div>
 	
-    <div data-ns-test="block-inline-button">
+    <div data-ns-test="block-inline-div">
         <div>Test1</div>
         <div>Test2</div>
         Answer:Block
     </div>
 	
-    <div data-ns-test="block-inline-button">
+    <div data-ns-test="block-inline-span">
         <span>Test1</span>
         <span>Test2</span>
         Answer:Inline
     </div>
 	
-    <div data-ns-test="block-inline-button">
+    <div data-ns-test="block-inline-p">
         <p>Test1</p>
         <p>Test2</p>
         Answer:Block
     </div>
 	
-    <div data-ns-test="block-inline-button">
+    <div data-ns-test="block-inline-input">
         <input type="test">test1
         <input type="test">test2
         Answer:Inline
     </div>
 	
-    <div data-ns-test="block-inline-button">
+    <div data-ns-test="block-inline-cite">
         <cite>test1</cite>
         <cite>test2</cite>
         Answer:Inline
     </div>
 	
-    <div data-ns-test="block-inline-button">
+    <div data-ns-test="block-inline-code">
         <code>test1</code><code>test2</code>
         Answer:Inline
     </div>
 	
-    <div data-ns-test="block-inline-button">
+    <div data-ns-test="block-inline-h1">
         <h1>Test1</h1>
         <h1>Test2</h1>
         Answer:Block
     </div>
 	
-    <div data-ns-test="block-inline-button">
+    <div data-ns-test="block-inline-sup">
         <sup>Test1</sup>
         <sup>Test2</sup>
         Answer:Inline
     </div>
 	
-    <div data-ns-test="block-inline-button">
+    <div data-ns-test="block-inline-sub">
         <sub>Test1</sub>
         <sub>Test2</sub>
         Answer:Inline 
