--- a/main.html
+++ b/main.html
@@ -11,9 +11,9 @@
     <script type="text/javascript" src="./script.js"></script>
 
 	
-	<div data-ns-test="block-inline-button">
-        <button>Test1</button>
-        <button>Test2</button>
+	<div >
+        <button data-ns-test="block-inline-button">Test1</button>
+        <button data-ns-test="block-inline-button">Test2</button>
         Answer:Inline
     </div>
 	
@@ -36,19 +36,20 @@
     </div>
 	
     <div data-ns-test="block-inline-input">
-        <input type="test">test1
-        <input type="test">test2
+        <input type="test">Test1
+        <input type="test">Test2
         Answer:Inline
     </div>
 	
     <div data-ns-test="block-inline-cite">
-        <cite>test1</cite>
-        <cite>test2</cite>
+        <cite>Test1</cite>
+        <cite>Test2</cite>
         Answer:Inline
     </div>
 	
     <div data-ns-test="block-inline-code">
-        <code>test1</code><code>test2</code>
+        <code>Test1</code>
+		<code>Test2</code>
         Answer:Inline
     </div>
 	
