--- a/main.html
+++ b/main.html
@@ -49,7 +49,7 @@
 		<div data-ns-test="block-inline-cite">
 			<cite> Test1</cite>
 			<cite> Test2</cite>
-             Answaer: Inline
+             Answer: Inline
 
 		</div>
 		<div data-ns-test="block-inline-code">
