--- a/main.html
+++ b/main.html
@@ -10,8 +10,8 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js"></script>
 
-	
-	<div data-ns-test="block-inline-button">
+<!-- Button -->	
+<div data-ns-test="block-inline-button">
   <button>Test1</button>
   <button>Test2</button>
   Answer: Inline
@@ -71,9 +71,9 @@
 
 <!-- Subscript -->
 <div data-ns-test="block-inline-sub">
-  <sub>Test1</sub>
-  <sub>Test2</sub>
-  Answer: Inline
+  <sub>Test1</sub>Answer: Inline
+  <sub>Test2</sub>Answer: Inline
+  
 </div>
 	
 </body>
