--- a/main.html
+++ b/main.html
@@ -71,9 +71,8 @@
 
 <!-- Subscript -->
 <div data-ns-test="block-inline-sub">
-  <sub>Test1</sub>Answer: Inline
-  <sub>Test2</sub>Answer: Inline
-  
+  <sub data-ns-test="block-inline-sub">Test1</sub>Answer: Inline
+  <sub data-ns-test="block-inline-sub">Test2</sub>Answer: Inline
 </div>
 	
 </body>
