--- a/main.html
+++ b/main.html
@@ -70,7 +70,7 @@
 </div>
 
 <!-- Subscript -->
-<div data-ns-test="block-inline-sub">
+<div>
   <sub data-ns-test="block-inline-sub">Test1</sub>Answer: Inline
   <sub data-ns-test="block-inline-sub">Test2</sub>Answer: Inline
 </div>
