--- a/main.html
+++ b/main.html
@@ -71,8 +71,9 @@
 
 <!-- Subscript -->
 <div>
-  <sub data-ns-test="block-inline-sub">Test1</sub>Answer: Inline
-  <sub data-ns-test="block-inline-sub">Test2</sub>Answer: Inline
+  <sub data-ns-test="block-inline-sub">Test1</sub>
+  <sub data-ns-test="block-inline-sub">Test2</sub>
+  Answer: Inline
 </div>
 	
 </body>
