--- a/main.html
+++ b/main.html
@@ -45,16 +45,23 @@
   Answer: Inline
 </div>
 
-<!-- Cite/Code -->
+<!-- Cite -->
 <div>
   <cite data-ns-test="block-inline-cite">Test1</cite>
   <cite data-ns-test="block-inline-cite">Test2</cite>
   Answer: Inline
 </div>
 
+<!-- Code -->
+<div>
+  <code data-ns-test="block-inline-code">Test1</code>
+  <code data-ns-test="block-inline-code">Test2</code>
+  Answer: Inline
+</div>
+
 <!-- H1 -->
 <div>
-  <h1 data-ns-test="block-inline-h1">Test2</h1>
+  <h1 data-ns-test="block-inline-h1">Test1</h1>
   <h1 data-ns-test="block-inline-h1">Test2</h1>
   Answer: Block
 </div>
